--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     -->
     <title>Kukka-Kimppula</title>
   </head>
+  <script type="text/javaScript" src="https://code.createjs.com/1.0.0/preloadjs.min.js"></script>
   <script type="text/javaScript" src="./data/texts.js"></script>
   <script type="text/javaScript" src="./data/images.js"></script>
   <body>
